# Yuketang_Assistant

./: .gitignore  .impeccable.md  LICENSE  README.md  components.json  index.html  package.json  task.md  tsconfig.json  成绩单.xlsx
.codex/environments/: environment.toml
extension/: background.js  content.js  manifest.json
extension/lib/: profiles.js
extension/options/: options.css  options.html  options.js
sample-data/: example-roster.csv
shared/: bridge.ts  models.ts  scoring.ts
src/: App.tsx  ZenWorkbench.tsx  chatgpt.css  main.tsx  showcase.css  styles.css  viewMeta.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: app_service.rs  grading_service.rs  mod.rs  report_service.rs
src-tauri/src/commands/: data.rs  grading.rs  mod.rs  system.rs
src-tauri/src/domain/: matcher.rs  mod.rs  models.rs  scoring.rs
src-tauri/src/infrastructure/: backup.rs  bridge.rs  database.rs  import_export.rs  mod.rs  seed.rs
src/chatgpt/: ChatGptClonePage.tsx
src/components/: SelectField.tsx  Sidebar.tsx  StatCard.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  input.tsx  scroll-area.tsx  textarea.tsx
src/lib/: api.ts  format.ts
src/macos/: MacWorkbench.tsx  macos.css
src/macos/components/: MacControls.tsx  MacSidebar.tsx  (+2 more)
src/pages/: AssignmentDetailPage.tsx  AssignmentFormPage.tsx  DashboardPage.tsx  GradingPage.tsx  SettingsPage.tsx  ShowcasePage.tsx  StudentsPage.tsx
src/store/: appStore.ts
(+6 files in other folders)
